@@ -1,2 +1,2 @@
 set SCRIPT_DIR=%~dp0
-java -Xmx2248M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
+java -Xms1024M -Xmx2048M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=1024M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
